fix: ensure elective courses are scheduled in same time slots for both sections A and B

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -26,6 +26,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/debug" target="_blank">
+                    <i class="fas fa-bug"></i>
+                    <span>Debug</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="#" data-semester="1">
                     <i class="fas fa-book"></i>
                     <span>Semester 1</span>
