--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -26,12 +26,6 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/debug" target="_blank">
-                    <i class="fas fa-bug"></i>
-                    <span>Debug</span>
-                </a>
-            </li>
-            <li class="nav-item">
                 <a href="#" data-semester="1">
                     <i class="fas fa-book"></i>
                     <span>Semester 1</span>
@@ -62,7 +56,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#settings">
+                <a href="#" id="settings-nav-btn">
                     <i class="fas fa-cog"></i>
                     <span>Settings</span>
                 </a>
